--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "firebase": "^10.12.5",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "svix": "^1.29.0",
     "tailwind-merge": "^2.5.1",
