--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
+    "recharts": "^2.12.7",
     "svix": "^1.29.0",
     "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7",
