--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "fast-xml-parser": "^4.4.1",
     "firebase": "^10.12.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.427.0",
+    "mammoth": "^1.8.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "officegen": "^0.6.5",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.5.136",
+    "pptx-parser": "^1.1.7-beta.9",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
