--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.3.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
